k3s-config/routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# Name the Ingress resource
  name: ync-route
  annotations:
    # Use Traefik as the Ingress controller
    ingressClassName: traefik
    ingress.kubernetes.io/rewrite-target: /
    # Add Cert-Manager SSL certificates as the name of the ClusterIssuer resource
    cert-manager.io/cluster-issuer: letsencrypt-certificate
    traefik.ingress.kubernetes.io/router.middlewares: ync-redirect@kubernetescrd
spec:
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName: yncorp.letsencrypt.key.tls
      hosts:
        # Replace with your domain name
        - yn-corp.xyz
  # Create Ingress routing rules
  rules:
  # Replace with your domain name
  - host: yn-corp.xyz
    http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
           # Name of your service resource
            name: home-page
            port:
             # Port number to forward traffic to
              number: 80
      - path: /api/shop
        pathType: Prefix
        backend:
          service:
           # Name of your service resource
            name: shop-api
            port:
             # Port number to forward traffic to
              number: 443
      - path: /shop
        pathType: Prefix
        backend:
          service:
           # Name of your service resource
            name: shop-app
            port:
             # Port number to forward traffic to
              number: 443
